--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@inco/js": "^0.7.11",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
+    "@metamask/sdk": "^0.34.0",
     "@next/mdx": "^15.5.5",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
