chore: Update frontend package.json metadata
- Changed name from template to shadow-orders-frontend
- Updated version to 0.1.0 for initial release
- Added project description

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "mainline-nextjs-template",
-  "version": "1.2.0",
-  "author": "Shadcnblocks.com",
+  "name": "shadow-orders-frontend",
+  "version": "0.1.0",
+  "description": "Privacy-preserving limit orders on Uniswap V4 with Inco Lightning TEE",
+  "author": "Shadow Orders Team",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
